// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SparklesIcon should render the SparklesIcon component when pressed is false 1`] = `
<div>
  <svg
    fill="none"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3.33284 2V4.66667M1.99951 3.33333H4.66618M3.99951 11.3333V14M2.66618 12.6667H5.33284M8.66618 2L10.19 6.57143L13.9995 8L10.19 9.42857L8.66618 14L7.14237 9.42857L3.33284 8L7.14237 6.57143L8.66618 2Z"
      stroke="url(#paint0_linear_1208_188)"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.33333"
    />
    <defs>
      <lineargradient
        gradientUnits="userSpaceOnUse"
        id="paint0_linear_1208_188"
        x1="0"
        x2="16"
        y1="0"
        y2="16"
      >
        <stop
          stop-color="#A61E69"
        />
        <stop
          offset="1"
          stop-color="#6366F1"
        />
      </lineargradient>
    </defs>
  </svg>
</div>
`;

exports[`SparklesIcon should render the SparklesIcon component when pressed is true 1`] = `
<div>
  <svg
    fill="none"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3.33284 2V4.66667M1.99951 3.33333H4.66618M3.99951 11.3333V14M2.66618 12.6667H5.33284M8.66618 2L10.19 6.57143L13.9995 8L10.19 9.42857L8.66618 14L7.14237 9.42857L3.33284 8L7.14237 6.57143L8.66618 2Z"
      stroke="white"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.33333"
    />
    <defs>
      <lineargradient
        gradientUnits="userSpaceOnUse"
        id="paint0_linear_1208_188"
        x1="0"
        x2="16"
        y1="0"
        y2="16"
      >
        <stop
          stop-color="#A61E69"
        />
        <stop
          offset="1"
          stop-color="#6366F1"
        />
      </lineargradient>
    </defs>
  </svg>
</div>
`;
